# abey-coin-old

./: .gitignore  ABEY.ini  ABEYJson.c  ABEYJson.h  ABEY_Wallet.dpr  ABEY_Wallet.exe - Shortcut.lnk  ABEY_Wallet.lps  ABEY_daemon.lpi  ABEY_daemon.lps  ABEY_miner.lpi  ABEY_miner.lps  ABEY_miner.pp  CMakeLists.txt  ContractsShortcut.lnk  abey-vm  abey_daemon.pp  blockchainSock.c  blockchainSock.h  blockchainTypes.c  blockchainTypes.h  bytecode.avm  communication.json  config.inc  events.c  json.c  json.h  jsonIn.c  jsonIn.h  jsonOut.c  jsonOut.h  main.c  observer.c  observer.h  registrationResponseSchema.json  sha.cl  startMiningCPU.bat  startMiningGPU.bat
FPCObservable/: MockClient.lpi  MockClient.lpr  MockClient.lps  ObservableServer.lpr  ObservableServer.lps  SpawnClients.ps1  UPublisher.pas  observable.pas  ujsoncommunication.pas  ulistener.pas
backup/: ABEY_Wallet.lpi  ABEY_Wallet.lps  ABEY_daemon.lpi  ABEY_daemon.lps  ABEY_miner.lps
blockchain/: blockchain.lpi  blockchain.lpr  blockchain.lps
core/: UAES.pas  UAccountKeyStorage.pas  UAccounts.pas  UBaseTypes.pas  UBlockChain.pas  UChunk.pas  UConst.pas  UCrypto.pas  UECIES.pas  UFileStorage.pas  UGPUMining.pas  ULog.pas  UNetProtection.pas  UNode.pas  UOpTransaction.pas  UOpenSSL.pas  UPCCryptoLib4Pascal.pas  UPCEncryption.pas  UPCHardcodedRandomHashTable.pas  UPCOpenSSLSignature.pas  UPCOperationsBlockValidator.pas  UPCOperationsSignatureValidator.pas  UPCOrderedLists.pas  UPCTNetDataExtraMessages.pas  UPoolMinerThreads.pas  UPoolMining.pas  UPublisher.pas  URPC.pas  URandomHash.pas  UServerApp.pas  USha256.pas  (+15 more)
(+478 files in other folders)
